syntax = "proto3";

package com.krushikranti.subscription;

option java_multiple_files = true;
option java_package = "com.krushikranti.subscription.grpc";
option java_outer_classname = "SubscriptionProto";

// Subscription Service - exposed via gRPC for other microservices
service SubscriptionService {
  // Check if user is subscribed
  rpc CheckSubscription (CheckSubscriptionRequest) returns (CheckSubscriptionResponse);
  
  // Get subscription status details
  rpc GetSubscriptionStatus (GetSubscriptionStatusRequest) returns (SubscriptionStatusResponse);
}

message CheckSubscriptionRequest {
  string user_id = 1;
}

message CheckSubscriptionResponse {
  bool is_subscribed = 1;
  string subscription_status = 2;
  string message = 3;
}

message GetSubscriptionStatusRequest {
  string user_id = 1;
}

message SubscriptionStatusResponse {
  int64 subscription_id = 1;
  int64 farmer_id = 2;
  int64 user_id = 3;
  bool is_subscribed = 4;
  string subscription_status = 5;
  string payment_status = 6;
  string subscription_start_date = 7;
  string subscription_end_date = 8;
  int32 days_remaining = 9;
  string amount = 10;
  string currency = 11;
  string message = 12;
}

